[GStreamer] isContentTypeSupported() fails for av1,vp8,vp9 codec strings https://bugs.webkit.org/show_bug.cgi?id=294791

Reviewed by Xabier Rodriguez-Calvar.

gst_codec_utils_caps_from_mime_codec() expects a four characters string. See also RFC 6381 section
3.3.

Canonical link: https://commits.webkit.org/296500@main